--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "google-maps-react": "^2.0.2",
     "mdbreact": "^4.23.1",
     "react": "^16.12.0",
     "react-awesome-slider": "^2.2.1",
