--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "homepage":"https://priguis.github.io/Abatalha/",
   "name": "abatalha",
   "version": "0.1.0",
+  "homepage":"https://priguis.github.io/Abatalha/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -19,12 +19,12 @@
     "react-scripts": "3.3.0"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
